--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,5 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
+- task: PublishBuildArtifacts@1
+
